Fixed minor structure issue