@@ -48,7 +48,7 @@ class CypressUpdateTicketActionTest {
             CypressReport report = new CypressReport();
             List<CypressReport.CypressTest> tests =
                 List.of(new CypressReport.CypressTest(), new CypressReport.CypressTest());
-            tests.get(0).setTitle("first-test");
+            tests.getFirst().setTitle("first-test");
             tests.get(1).setTitle("second-test");
             report.setTests(tests);
 
@@ -58,7 +58,7 @@ class CypressUpdateTicketActionTest {
             action.process();
 
             verify(action).getCypressReport();
-            verify(action).updateJiraIssue(tests.get(0));
+            verify(action).updateJiraIssue(tests.getFirst());
             verify(action).updateJiraIssue(tests.get(1));
         }
 
